--- a/eureka-server.yml
+++ b/eureka-server.yml
@@ -6,6 +6,6 @@ eureka:
     hostname: localhost
   client:
     fetchRegistry: false
-    registryWithEureka: false
+    registerWithEureka: false
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
