--- a/eureka-server.yml
+++ b/eureka-server.yml
@@ -9,3 +9,7 @@ eureka:
     registerWithEureka: false
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+
+
+spring:
+ banner: false
